--- a/package.json
+++ b/package.json
@@ -2,24 +2,15 @@
   "name": "schoolpast-ng",
   "version": "1.0.0",
   "description": "SchoolPast.ng Landing Page with Waitlist functionality",
-  "main": "server.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vercel dev",
+    "deploy": "vercel deploy"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
-    "fs-extra": "^11.1.1",
-    "mongodb": "^6.16.0",
-    "nodemailer": "^6.9.7",
-    "sib-api-v3-sdk": "^8.5.0"
+    "@sendgrid/mail": "^7.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "vercel": "^32.0.0"
   }
 }
