--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,8 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/$1" }
-  ]
+  ],
+  "env": {
+    "ADMIN_API_KEY": "@admin_api_key"
+  }
 } 
