--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,11 @@
     { "src": "**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { 
+      "src": "/api/waitlist",
+      "methods": ["GET", "POST"],
+      "dest": "/api/waitlist.js"
+    },
     { "src": "/(.*)", "dest": "/$1" }
   ],
   "env": {
