--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "methods": ["GET", "POST"],
       "dest": "/api/waitlist.js"
     },
+    { 
+      "src": "/admin.html",
+      "dest": "/admin.html"
+    },
     { "src": "/(.*)", "dest": "/$1" }
   ],
   "env": {
