Remove admin.html and associated login features, focusing the project on core user experience and waitlist functionality. Update vercel.json for streamlined API routing and enhance waitlist API to utilize Google Sheets for data management.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "vercel deploy"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0"
+    "@sendgrid/mail": "^7.7.0",
+    "googleapis": "^129.0.0"
   },
   "devDependencies": {
     "vercel": "^32.0.0"
