--- a/vercel.json
+++ b/vercel.json
@@ -5,18 +5,7 @@
     { "src": "**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { 
-      "src": "/api/waitlist",
-      "methods": ["GET", "POST"],
-      "dest": "/api/waitlist.js"
-    },
-    { 
-      "src": "/admin.html",
-      "dest": "/admin.html"
-    },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/$1" }
-  ],
-  "env": {
-    "ADMIN_API_KEY": "@admin_api_key"
-  }
+  ]
 } 
